--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	function onMapClick(e) {
     	popup
         .setLatLng(e.latlng)
-        .setContent("You clicked the map at " + e.latlng.toString())
+        .setContent("You clicked the map at " + X=${e.latlng.lng},Y=${e.latlng.lat})
         .openOn(map);
 	}
 
