--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	function onMapClick(e) {
     	popup
         .setLatLng(e.latlng)
-        .setContent("You clicked the map at " + e.latlng.lng.toString() + e.latlng.lat.toString())
+        .setContent("You clicked the map at X:" + e.latlng.lng.toString()+ " Y:" + e.latlng.lat.toString())
         .openOn(map);
 	}
 
