--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             .then(response => response.json())
             .then(data => {
                 data.forEach(pc => {
-                    L.marker([pc.y, pc.x]), {
-   			 icon: L.BeautifyIcon.icon(options)
-    			})
+                    L.marker([pc.y, pc.x], { icon: L.BeautifyIcon.icon(options), draggable: true })
                         .addTo(map)
                         .bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
                 });
