--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         // Caricamento dati PC da un file JSON
 	options = {
    		isAlphaNumericIcon: true
+		, iconShape: 'rectangle'
                 , borderColor: '#00ABDC'
                 , textColor: '#00ABDC'
                 , innerIconStyle: 'margin-top:0;'
