--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
    		isAlphaNumericIcon: true
                 , borderColor: '#00ABDC'
                 , textColor: '#00ABDC'
+		, textSize: '10px'
                 , innerIconStyle: 'margin-top:0;'
 		};
         fetch('pc_mappa.json')
