--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         function onMapClick(e) {
             popup
             .setLatLng(e.latlng)
-            .setContent("You clicked the map at X:" + e.latlng.lng.toString()+ " Y:" + e.latlng.lat.toString())
+            .setContent("X:" + e.latlng.lng.toString()+ " Y:" + e.latlng.lat.toString())
             .openOn(map);
         }
 
