--- a/index.html
+++ b/index.html
@@ -97,3 +97,13 @@
         fetch('pc_mappa.json')
             .then(response => response.json())
             .then(data => {
+                data.forEach(pc => {
+                    L.marker([pc.y, pc.x], { icon: L.BeautifyIcon.icon(options), draggable: false })
+                        .addTo(map)
+                        .bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
+                });
+            })
+            .catch(error => console.error('Errore nel caricamento dei dati:', error));
+    </script>
+</body>
+</html>
