--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             text-align: center;
         }
 
+        /* Impostazioni per la mappa */
+        #map {
+            height: 800px;
+            width: 100%;
+        }
+
         /* Modifica il font e la dimensione del testo nei popup */
         .leaflet-popup-content {
             font-family: 'Roboto Mono', monospace;
