--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             borderColor: '#00ABDC',
             textColor: '#00ABDC',
             textSize: '10px',
-            innerIconStyle: 'margin-top:0;font-size: 10px; '
+            innerIconStyle: 'font-size: 13px; '
         };
         fetch('pc_mappa.json')
             .then(response => response.json())
