--- a/index.html
+++ b/index.html
@@ -101,31 +101,32 @@
                 isAlphaNumericIcon: true,
                 borderColor: '#00ABDC',
                 textColor: '#00ABDC',
-                iconSize: [40, 40],  // Puoi rimuovere questa linea se non vuoi cambiare la dimensione dell'icona
-                innerIconStyle: 'font-size: 14px; line-height: 40px;',  // Cambia solo la dimensione del testo
+                innerIconStyle: 'font-size: 14px;',  // Cambia solo la dimensione del testo
             };
 
             // Crea l'icona con il numero progressivo
             var iconText = (index + 1).toString();  // Numero progressivo come testo
 
-            // Aggiungi il numero progressivo nell'icona
             var marker = L.marker([pc.y, pc.x], {
                 icon: L.BeautifyIcon.icon(options),
                 draggable: false
             })
             .addTo(map);
 
-            // Trova l'elemento div della icona e imposta il numero come testo
-            var iconSpan = marker._icon.querySelector('span');
-            if (iconSpan) {
-                iconSpan.textContent = iconText;  // Imposta il numero progressivo come testo nell'icona
-            }
+            // Modifica il testo dell'icona con il numero progressivo
+            marker.on('add', function() {
+                var iconSpan = marker._icon.querySelector('span');
+                if (iconSpan) {
+                    iconSpan.textContent = iconText;  // Imposta il numero progressivo come testo nell'icona
+                }
+            });
 
             // Rendi il marker cliccabile come prima
             marker.bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
         });
     })
     .catch(error => console.error('Errore nel caricamento dei dati:', error));
+
 
 
     </script>
