--- a/index.html
+++ b/index.html
@@ -6,63 +6,23 @@
     <title>Mappa Interattiva PC</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/174a567165.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="leaflet-beautify-marker-icon.css">
-    <script src="leaflet-beautify-marker-icon.js"></script>
-    
-    <!-- Aggiungi il link al font di Google -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
-
-    <!-- Aggiungi il CSS personalizzato -->
     <style>
-        /* Applica il font a tutta la pagina */
-        body {
-            font-family: 'Roboto Mono', monospace;
-        }
-
-        h2 {
-            font-family: 'Roboto Mono', monospace;
-            font-size: 24px;
-            color: #333;
-            text-align: center;
-        }
-
-        /* Impostazioni per la mappa */
         #map {
             height: 800px;
             width: 100%;
         }
-
-        /* Modifica il font e la dimensione del testo nei popup */
-        .leaflet-popup-content {
-            font-family: 'Roboto Mono', monospace;
+        .custom-icon div {
+            background-color: #00ABDC;
+            color: white;
             font-size: 14px;
-            color: #555;
-        }
-
-        /* Personalizza l'aspetto dei link nei popup */
-        .leaflet-popup-content a {
-            font-size: 12px;
-            color: #00ABDC;
-            text-decoration: none;
-        }
-
-        /* Aggiungi effetti hover sui link nei popup */
-        .leaflet-popup-content a:hover {
-            text-decoration: underline;
-        }
-
-        /* Cambia il font per il contenuto dell'intestazione della mappa */
-        .leaflet-control-attribution {
-            font-family: 'Roboto Mono', monospace;
-        }
-
-        /* Personalizza le icone dei marker */
-        .leaflet-div-icon {
-            font-size: 18px; /* Cambia la dimensione dell'icona */
-            color: #00ABDC;  /* Cambia il colore del testo */
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 </head>
@@ -80,55 +40,45 @@
         var bounds = [[0, 0], [imgHeight, imgWidth]];
         var image = L.imageOverlay('mappabase.png', bounds).addTo(map);
         map.fitBounds(bounds);
-	     
+
         var popup = L.popup();
 
         function onMapClick(e) {
             popup
-            .setLatLng(e.latlng)
-            .setContent("X:" + e.latlng.lng.toString()+ " Y:" + e.latlng.lat.toString())
-            .openOn(map);
+                .setLatLng(e.latlng)
+                .setContent("You clicked the map at X:" + e.latlng.lng.toString()+ " Y:" + e.latlng.lat.toString())
+                .openOn(map);
         }
 
-        map.on('click', onMapClick);    
+        map.on('click', onMapClick);
 
         // Caricamento dati PC da un file JSON
-       fetch('pc_mappa.json')
-    .then(response => response.json())
-    .then(data => {
-        data.forEach((pc, index) => {  // 'index' fornisce il numero progressivo
-            var options = {
-                isAlphaNumericIcon: true,
-                borderColor: '#00ABDC',
-                textColor: '#00ABDC',
-                innerIconStyle: 'font-size: 14px;',  // Cambia solo la dimensione del testo
-            };
+        fetch('pc_mappa.json')
+            .then(response => response.json())
+            .then(data => {
+                data.forEach((pc, index) => {  // 'index' fornisce il numero progressivo
+                    var iconText = (index + 1).toString();  // Numero progressivo come testo
 
-            // Crea l'icona con il numero progressivo
-            var iconText = (index + 1).toString();  // Numero progressivo come testo
+                    // Crea una nuova icona personalizzata con un numero progressivo
+                    var icon = L.divIcon({
+                        className: 'custom-icon',  // Classe CSS personalizzata per la gestione
+                        html: `<div>${iconText}</div>`,
+                        iconSize: [30, 30],  // Imposta la dimensione dell'icona
+                        iconAnchor: [15, 15],  // Centra l'icona
+                    });
 
-            var marker = L.marker([pc.y, pc.x], {
-                icon: L.BeautifyIcon.icon(options),
-                draggable: false
+                    // Aggiungi il marker con l'icona personalizzata
+                    var marker = L.marker([pc.y, pc.x], {
+                        icon: icon,
+                        draggable: false
+                    })
+                    .addTo(map);
+
+                    // Rendi il marker cliccabile come prima
+                    marker.bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
+                });
             })
-            .addTo(map);
-
-            // Modifica il testo dell'icona con il numero progressivo
-            marker.on('add', function() {
-                var iconSpan = marker._icon.querySelector('span');
-                if (iconSpan) {
-                    iconSpan.textContent = iconText;  // Imposta il numero progressivo come testo nell'icona
-                }
-            });
-
-            // Rendi il marker cliccabile come prima
-            marker.bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
-        });
-    })
-    .catch(error => console.error('Errore nel caricamento dei dati:', error));
-
-
-
+            .catch(error => console.error('Errore nel caricamento dei dati:', error));
     </script>
 </body>
 </html>
