--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            font-family: 'Roboto Mono', monospace; /* Font modificato */
+            font-weight: bold;  /* Testo in grassetto */
         }
     </style>
 </head>
@@ -36,7 +38,7 @@
             minZoom: -2,
         });
 
-        var imgWidth = 2900, imgHeight = 1500; // Dimensioni della tua immagine
+        var imgWidth = 3000, imgHeight = 1500; // Dimensioni della tua immagine
         var bounds = [[0, 0], [imgHeight, imgWidth]];
         var image = L.imageOverlay('mappabase.png', bounds).addTo(map);
         map.fitBounds(bounds);
