--- a/index.html
+++ b/index.html
@@ -9,10 +9,54 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/174a567165.js" crossorigin="anonymous"></script>
     <style>
+        /* Applica il font a tutta la pagina */
+        body {
+            font-family: 'Roboto Mono', monospace;
+        }
+
+        h2 {
+            font-family: 'Roboto Mono', monospace;
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+        }
+
+        /* Impostazioni per la mappa */
         #map {
             height: 800px;
             width: 100%;
         }
+
+        /* Modifica il font e la dimensione del testo nei popup */
+        .leaflet-popup-content {
+            font-family: 'Roboto Mono', monospace;
+            font-size: 14px;
+            color: #555;
+        }
+
+        /* Personalizza l'aspetto dei link nei popup */
+        .leaflet-popup-content a {
+            font-size: 12px;
+            color: #00ABDC;
+            text-decoration: none;
+        }
+
+        /* Aggiungi effetti hover sui link nei popup */
+        .leaflet-popup-content a:hover {
+            text-decoration: underline;
+        }
+
+        /* Cambia il font per il contenuto dell'intestazione della mappa */
+        .leaflet-control-attribution {
+            font-family: 'Roboto Mono', monospace;
+        }
+
+        /* Personalizza le icone dei marker */
+        .leaflet-div-icon {
+            font-size: 18px; /* Cambia la dimensione dell'icona */
+            color: #00ABDC;  /* Cambia il colore del testo */
+        }
+
         .custom-icon div {
             background-color: #00ABDC;
             color: white;
@@ -77,10 +121,4 @@
                     .addTo(map);
 
                     // Rendi il marker cliccabile come prima
-                    marker.bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</a>`);
-                });
-            })
-            .catch(error => console.error('Errore nel caricamento dei dati:', error));
-    </script>
-</body>
-</html>
+                    marker.bindPopup(`<b>${pc.nome}</b><br><a href='${pc.link}' target='_blank'>Vai al PC</
