--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     // Aggiungi un elemento alla lista numerata
                     var listItem = document.createElement('li');
-                    listItem.innerHTML = `${index + 1}. <strong>${pc.nome}</strong>`; // Aggiungi il numero progressivo solo nella lista
+                    listItem.innerHTML = `<strong>${pc.nome}</strong>`; // Aggiungi il numero progressivo solo nella lista
                     computerList.appendChild(listItem);
 
                     // Rendi il marker cliccabile come prima
