--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             minZoom: -2,
         });
 
-        var imgWidth = 3000, imgHeight = 1500; // Dimensioni della tua immagine
+        var imgWidth = 2811, imgHeight = 1632; // Dimensioni della tua immagine
         var bounds = [[0, 0], [imgHeight, imgWidth]];
-        var image = L.imageOverlay('mappabase.png', bounds).addTo(map);
+        var image = L.imageOverlay('mappabase.jpg', bounds).addTo(map);
         map.fitBounds(bounds);
 
         var popup = L.popup();
