--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script>
         var map = L.map('map', {
             crs: L.CRS.Simple,
-            minZoom: -2,
+            minZoom: 0,
         });
 
         var imgWidth = 2811, imgHeight = 1632; // Dimensioni della tua immagine
@@ -73,7 +73,7 @@
 
                     // Aggiungi un elemento alla lista numerata
                     var listItem = document.createElement('li');
-                    listItem.innerHTML = `<strong>${pc.nome}</strong>`; // Aggiungi solo il nome senza il numero
+                    listItem.innerHTML = `${index + 1}. <strong>${pc.nome}</strong>`; // Aggiungi solo il nome senza il numero
                     computerList.appendChild(listItem);
 
                     // Rendi il marker cliccabile come prima
